<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/containerEmpty"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/backgroundPrimary">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/titleAppName"
        app:srcCompat="@drawable/ic_find"
        app:tint="@color/backgroundLayoutIcon" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textNoResults"
        android:textColor="@color/textColor"
        android:textSize="@dimen/textSizeBig"
        android:textStyle="bold"
        android:layout_margin="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textTryNewSearch"
        android:textColor="@color/textColor"
        android:textSize="18sp"
        android:layout_margin="10dp" />

</LinearLayout>