<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.codequark.yelp.viewModels.MainViewModel" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/dialogWidthSize"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        app:cardBackgroundColor="@color/colorWhite"
        style="@style/Style.CardView">

        <LinearLayout
            android:layout_width="@dimen/dialogWidthSize"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/textLogin"
                    android:textSize="18sp"
                    android:textColor="@color/colorWhite"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp" />

            </RelativeLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:startIconDrawable="@drawable/ic_action_person"
                app:startIconTint="@color/colorPrimary"
                style="@style/Style.TextInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={viewModel.email}"
                    android:textSize="@dimen/textSizeNormal"
                    android:textColor="@color/textColor"
                    android:textColorHint="@color/textColor"
                    android:hint="@string/titleEmail"
                    android:inputType="textEmailAddress"
                    android:importantForAutofill="no"
                    style="@style/Style.TextInputEditText" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:endIconMode="password_toggle"
                app:startIconDrawable="@drawable/ic_action_password"
                app:startIconTint="@color/colorPrimary"
                app:endIconTint="@color/colorPrimary"
                style="@style/Style.TextInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={viewModel.password}"
                    android:hint="@string/titlePassword"
                    android:textSize="@dimen/textSizeNormal"
                    android:inputType="textPassword"
                    android:importantForAutofill="no"
                    style="@style/Style.TextInputEditText" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="end">

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/textLogin"
                    android:textSize="@dimen/textSizeNormal"
                    android:textColor="@color/colorPrimary"
                    android:onClick="@{viewModel::login}"
                    android:layout_marginBottom="5dp"
                    style="@style/Style.Button.Borderless" />

                <Button
                    android:id="@+id/btnRegistrarse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/titleRegistrarse"
                    android:textSize="@dimen/textSizeNormal"
                    android:onClick="@{viewModel::registrarse}"
                    android:layout_marginBottom="5dp"
                    style="@style/Style.Button.Borderless" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</layout>